<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndstillingerActivity">

    <TextView
        android:id="@+id/text_indstillinger_overskrift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_btn_indstillinger"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="343dp"
        android:layout_height="238dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_indstillinger_overskrift">

        <TextView
            android:id="@+id/text_navn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_navn"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="227dp" />

        <EditText
            android:id="@+id/input_navn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="260dp" />

        <Button
            android:id="@+id/btn_save_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gem" />

        <TextView
            android:id="@+id/text_reset_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_score_reset" />

        <Button
            android:id="@+id/btn_reset_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nulstil" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_til_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:text="Til menuen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</android.support.constraint.ConstraintLayout>